# dchacha20

benchmarks/: Cargo.toml  output.txt  plot.p  transform.pl
benchmarks/benches/: cipher.rs
benchmarks/results/: decrypt_Chacha20.txt  decrypt_DChacha20.txt  decrypt_OpenSSL ChaCha20.txt  decrypt_RustCrypto ChaCha20.txt  encrypt_Chacha20.txt  encrypt_DChacha20.txt  encrypt_OpenSSL ChaCha20.txt  encrypt_RustCrypto ChaCha20.txt
dchacha20_optimized/: Cargo.toml
dchacha20_optimized/src/: chacha20.rs  dchacha20.rs  lib.rs
dchacha20_prototype/: dchacha20.py
